--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
       <img src="logo.png" />
 </p>
 
-<h1> Hitachi Devops Demo - Anil bidari </h1>
+<h1> Alka Cloud Enabled Devops Demo-2019 </h1>
 
 <div class="city">
   <h2>Alliances</h2>
